Style(colours): Update of all the colours from Figma

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -21,7 +21,7 @@ $color-tertiary-green: #06b271;         // MSD Green
 $color-tertiary-green-light: #e0f0de;   // MSD Green light
 $color-tertiary-grey: #696969;          // MSD Grey
 
-// Focus State (not shown in image, but retaining)
+// Focus State
 $color-focus-state: #b53cde;
 
 
@@ -43,9 +43,9 @@ $color-feedback-pink: #b53cde;
 
 // Shades Navy
 $color-shade-navy-60: #718ead;
-$color-shade-navy-45: #95aac1; // Existing
+$color-shade-navy-45: #95aac1;
 $color-shade-navy-40: #a1b3c8;
-$color-shade-navy-30: #b8c6d6; // Update to match Figma
+$color-shade-navy-30: #b8c6d6;
 $color-shade-navy-20: #d0d9e4;
 
 // Shades Blue
