--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -67,6 +67,10 @@ button {
   display: inline-block;
   cursor: pointer;
   font-weight: 400;
+
+  &:focus {
+    border-radius: $border-radius-round;
+  }
 }
 
 a {
