--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -7,23 +7,22 @@
 $color-primary: #017ac9; // MSD Blue
 
 // Primary Supporting
-$color-primary-navy: #134276;      // MSD Navy
+$color-primary-navy: #134276; // MSD Navy
 $color-primary-dark-navy: #162c45; // MSD Dark Navy
 
 // Secondary Colours
-$color-secondary-teal: #35c0ba;             // MSD Teal
-$color-secondary-accessible-teal: #23807b;  // Accessible Teal
-$color-secondary-salmon: #f75c58;           // MSD Salmon
-$color-secondary-purple: #3a54a1;           // MSD Purple
+$color-secondary-teal: #35c0ba; // MSD Teal
+$color-secondary-accessible-teal: #23807b; // Accessible Teal
+$color-secondary-salmon: #f75c58; // MSD Salmon
+$color-secondary-purple: #3a54a1; // MSD Purple
 
 // Tertiary Colours
-$color-tertiary-green: #06b271;         // MSD Green
-$color-tertiary-green-light: #e0f0de;   // MSD Green light
-$color-tertiary-grey: #696969;          // MSD Grey
+$color-tertiary-green: #06b271; // MSD Green
+$color-tertiary-green-light: #e0f0de; // MSD Green light
+$color-tertiary-grey: #696969; // MSD Grey
 
 // Focus State
 $color-focus-state: #b53cde;
-
 
 // Neutral Colours
 $color-grey-black-05: #f2f2f2;
@@ -123,5 +122,6 @@ $icon-warning: $color-feedback-orange;
 $stroke-accent: $color-primary;
 $stroke-primary: $color-grey-black-80;
 $stroke-secondary: $color-grey-black-60;
+$stroke-tertiary: $color-shade-navy-40;
 $stroke-error: $color-feedback-red;
 $stroke-focus: $color-feedback-pink;
