--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -27,21 +27,30 @@ fieldset {
 }
 
 // Input field
-.text-wrapper {
+// Input fields (text and number wrappers)
+.text-wrapper,
+.number-wrapper {
   display: flex;
   flex-direction: column;
 
   label {
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 120%;
     font-weight: 500;
-    margin-bottom: 4px;
+    margin-bottom: 0.25rem;
+    color: $text-secondary; // change from pink to token
   }
 
-  input[type='text'] {
+  input[type='text'],
+  input[type='number'] {
+    display: flex;
+    padding: $spacing-400;
+    align-items: center;
+    gap: $spacing-200;
+    align-self: stretch;
     border-radius: $border-radius-mid;
     border: 2px solid $stroke-tertiary;
-    padding: $spacing-400;
+    background: $background-light-primary;
     font-family: $font-family;
     font-size: 20px;
     line-height: 120%;
@@ -60,6 +69,7 @@ fieldset {
     }
   }
 }
+
 
 %label-common-style {
   @extend %state-focus;
