Style(input-form-fields): Further input field styles.

--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -51,7 +51,7 @@ fieldset {
     align-self: stretch;
     border-radius: $border-radius-mid;
     border: 2px solid $stroke-tertiary;
-    background: $background-light-primary;
+    background: $bg-light-secondary;
     font-family: $font-family;
     font-size: 20px;
     line-height: 120%;
