doc: track front end milestone

--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -74,7 +74,7 @@ button {
 }
 
 a {
-  font-size: 16px;
+  font-size: 1rem;
   color: $color-grey-black-80;
   box-shadow: none;
   text-decoration: underline;
