--- a/styles/settings/_wrappers.scss
+++ b/styles/settings/_wrappers.scss
@@ -1,6 +1,6 @@
 @use '../settings' as *;
 
-.default-content-wrapper {
+.default-content-wrapper .form-wrapper {
   padding: $spacing-600 $spacing-400;
   font-family: $font-family;
   font-size: $font-size-base;
