--- a/styles/settings/_wrappers.scss
+++ b/styles/settings/_wrappers.scss
@@ -1,6 +1,16 @@
 @use '../settings' as *;
 
-.default-content-wrapper .form-wrapper {
+
+
+// Temporary styles so the form is not full width - need to fix RW
+.form-wrapper {
+  padding: 7.5rem 5rem;
+  width: 61.25rem;
+  margin: 0 auto;
+}
+
+.default-content-wrapper,
+.form-wrapper {
   padding: $spacing-600 $spacing-400;
   font-family: $font-family;
   font-size: $font-size-base;
