--- a/blocks/form/components/repeatable-panel/repeatable-panel.css
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.css
@@ -15,7 +15,11 @@
     display: none;
 }
 
-.panel-repeatable-panel .edit-mode .btn-save,
-.panel-repeatable-panel .edit-mode .btn-cancel{
+.panel-repeatable-panel.edit-mode .btn-save,
+.panel-repeatable-panel.edit-mode .btn-cancel{
     display: block;
+}
+
+.panel-repeatable-panel.edit-mode .item-add{
+    display: none;
 }
