--- a/blocks/form/components/repeatable-panel/repeatable-panel.css
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.css
@@ -15,12 +15,12 @@
     display: none;
 }
 
-.panel-repeatable-panel.edit-mode .btn-save,
-.panel-repeatable-panel.edit-mode .btn-cancel{
+.panel-repeatable-panel [data-repeatable].current .btn-save,
+.panel-repeatable-panel [data-repeatable].current .btn-cancel{
     display: block;
 }
 
-.panel-repeatable-panel.edit-mode .item-add{
+.panel-repeatable-panel.editing .item-add{
     display: none !important;
 }
 
