--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -21,7 +21,7 @@ body {
 }
 
 p {
-  font-size: $font-size-base;
+  font-size: $size-font-base;
   margin-bottom: $spacing-300;
   color: $text-secondary;
 }
@@ -32,7 +32,7 @@ ul {
   margin-bottom: $spacing-400;
 
   li {
-    font-size: $font-size-base;
+    font-size: $size-font-base;
     line-height: 1.6;
     margin-bottom: $spacing-200;
 
