--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -105,7 +105,7 @@ fieldset {
 
 /********************
         CHECKBOX
-  ********************/
+********************/
 .checkbox-wrapper {
   display: flex;
   align-items: center;
@@ -141,7 +141,7 @@ fieldset {
 
 /********************
         RADIO
-  ********************/
+********************/
 
 .radio-group-wrapper {
   display: flex;
@@ -184,5 +184,14 @@ fieldset {
         }
       }
     }
+  }
+}
+
+/********************
+        SELECT
+********************/
+.drop-down-wrapper {
+  label {
+    @extend %label-common-style;
   }
 }
