style(form): select default style

--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -2,13 +2,13 @@
 // TODO: as this grew bigger, could potentially break up into it's own file
 // IE: _checkboxes.scss, _radios.scss
 
-  // Default style
-  label,
-  input[type='text'],
-  input[type='radio'],
-  input[type='checkbox'] {
-    cursor: pointer;
-  }
+// Default style
+label,
+input[type='text'],
+input[type='radio'],
+input[type='checkbox'] {
+  cursor: pointer;
+}
 
 fieldset {
   border: 0;
@@ -231,6 +231,7 @@ fieldset {
   }
 
   select {
+    cursor: pointer;
     border-radius: $border-radius-mid;
     border: 2px solid $stroke-tertiary;
     padding: $spacing-400;
@@ -238,6 +239,7 @@ fieldset {
     font-size: 20px;
     line-height: 120%;
     appearance: base-select;
+    width: 100%;
 
     &:focus-visible,
     &:focus,
@@ -246,6 +248,35 @@ fieldset {
     &:active {
       border-color: $stroke-accent;
       outline: $stroke-accent;
+    }
+
+    &::picker(select) {
+      appearance: base-select;
+      border: none;
+    }
+
+    &::picker-icon {
+      transition: 0.4s rotate;
+    }
+
+    &:open::picker-icon {
+      rotate: 180deg;
+    }
+
+    option {
+      cursor: pointer;
+      padding: $spacing-200;
+      color: $text-secondary;
+
+      &:hover {
+        color: $text-primary;
+        background-color: $color-shade-blue-10;
+      }
+
+      &[selected] {
+        background-color: $color-white;
+        color: $text-accent;
+      }
     }
   }
 }
