--- a/blocks/form/components/formtabs/formtabs.css
+++ b/blocks/form/components/formtabs/formtabs.css
@@ -1,17 +1,25 @@
 /* Tabs styling */
-main .form fieldset.formtabs legend {
+main .form:not(.edit-mode) fieldset.formtabs legend {
     display: none;
 }
 
-main .form fieldset.formtabs>fieldset.formtab {
+main .form:not(.edit-mode) fieldset.formtabs>fieldset.formtab {
     display: none;
 }
 
-main .form fieldset.formtabs>.navitems>li {
+main .form.edit-mode fieldset.formtabs>.navitems{
+    display: none;
+}
+
+main .form:not(.edit-mode) fieldset.formtabs>.navitems{
+    display: block;
+}
+
+main .form:not(.edit-mode) fieldset.formtabs>.navitems>li {
     background-color: aqua;
 }
 
-main .form fieldset.formtabs>.navitems>li.navitem-current,
-main .form fieldset.formtabs>fieldset.formtab.formtab-current {
+main .form:not(.edit-mode) fieldset.formtabs>.navitems>li.navitem-current,
+main .form:not(.edit-mode) fieldset.formtabs>fieldset.formtab.formtab-current {
     background-color: blue;
 }
