fix(style): put paragraph styles under typography

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -67,6 +67,18 @@ h6 {
   }
 }
 
+p {
+  font-size: $size-font-base;
+  margin-bottom: 40px;
+  color: $text-secondary;
+  // margin: 0 0 40px 0; // standard bottom margin for spacing below the paragraph RW
+
+  // Add top spacing *between* stacked paragraphs
+  & + p {
+    margin-top: $spacing-400;
+  }
+}
+
 /*Rebecca added this*/
 .subtitle {
   font-family: $font-family;
