--- a/styles/forms/_select.scss
+++ b/styles/forms/_select.scss
@@ -27,8 +27,12 @@
     }
 
     &::picker(select) {
+      @include elevation-2;
       appearance: base-select;
       border: none;
+      padding: $spacing-200;
+      background-color: $color-white;
+      border-radius: $border-radius-mid;
     }
 
     &::picker-icon {
@@ -47,6 +51,7 @@
       &:hover {
         color: $text-primary;
         background-color: $color-shade-blue-10;
+        border-radius: $border-radius-low;
       }
 
       &[selected] {
