feat(form) tabs

--- a/blocks/form/components/formtabs/formtabs.scss
+++ b/blocks/form/components/formtabs/formtabs.scss
@@ -36,6 +36,7 @@ main .form:not(.edit-mode) {
             display: flex;
             align-items: center;
             list-style: none;
+            cursor: pointer;
         }
 
         >.navitems>li.navitem-current {
