--- a/blocks/form/components/repeatable-panel/repeatable-panel.css
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.css
@@ -2,11 +2,11 @@
     background-color:aquamarine;
 }
 
-.panel-repeatable-panel [data-repeatable]{
+.panel-repeatable-panel [data-repeatable].saved{
     display: none;
 }
 
-.panel-repeatable-panel [data-repeatable].edit-mode{
+.panel-repeatable-panel [data-repeatable]:not(.saved){
     display: block;
 }
 
@@ -15,7 +15,15 @@
     display: none;
 }
 
-.panel-repeatable-panel .edit-mode .btn-save,
-.panel-repeatable-panel .edit-mode .btn-cancel{
+.panel-repeatable-panel [data-repeatable].current .btn-save,
+.panel-repeatable-panel [data-repeatable].current .btn-cancel{
     display: block;
+}
+
+.panel-repeatable-panel.editing .item-add{
+    display: none !important;
+}
+
+.panel-repeatable-panel .item-remove{
+    display: none !important;
 }
