feat(form) tabs

--- a/blocks/form/components/formtabs/formtabs.scss
+++ b/blocks/form/components/formtabs/formtabs.scss
@@ -1,6 +1,22 @@
 @use '../../../../styles/settings' as *;
 
 /* Tabs styling */
+main .form {
+    >fieldset.formtab {
+        .plain-text-wrapper {
+            p {
+                color: $color-grey-black-80;
+            }
+
+            li {
+                &::marker {
+                    color: $color-grey-black-80;
+                }
+            }
+        }
+    }
+}
+
 main .form:not(.edit-mode) {
     fieldset.formtabs {
         legend {
@@ -9,18 +25,6 @@ main .form:not(.edit-mode) {
 
         >fieldset.formtab {
             display: none;
-            
-            .plain-text-wrapper {
-                p {
-                    color: $color-grey-black-80;
-                }
-
-                li {
-                    &::marker {
-                        color: $color-grey-black-80;
-                    }
-                }
-            }
         }
 
         >.navitems {
